Fix Bug 2462736 - V3 Format extensibility broken
git-svn-id: svn://svn.code.sf.net/p/jpwsafe/code/trunk@400 3f901d5b-7c5d-4663-935e-8925751b605d